# llm_hw7_medicine_reviews

./: .gitignore  README.md  hw7_medicine_reviews.ipynb  pyproject.toml
scripts/: cleaning.py  cluster_topics.py  clustering.py  dataset.py  embeddings.py  evaluation.py  inspection.py  lstm_distillation.py  model.py  split.py  student_evaluation.py  text_dataset.py  text_normalization.py  train.py
