[project]
name = "llm-hw7-medicine-reviews"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
]

[dependency-groups]
dev = ["ruff>=0.14.10"]
